@@ -3,6 +3,7 @@
 from test.test_support import run_unittest, run_doctest, check_warnings
 import unittest
 import Cookie
+import pickle
 
 
 class CookieTests(unittest.TestCase):
@@ -140,6 +141,18 @@ class CookieTests(unittest.TestCase):
             C.load(s)
             self.assertEqual(dict(C), {})
             self.assertEqual(C.output(), '')
+
+    def test_pickle(self):
+        rawdata = 'Customer="WILE_E_COYOTE"; Path=/acme; Version=1'
+        expected_output = 'Set-Cookie: %s' % rawdata
+
+        C = Cookie.SimpleCookie()
+        C.load(rawdata)
+        self.assertEqual(C.output(), expected_output)
+
+        for proto in range(pickle.HIGHEST_PROTOCOL + 1):
+            C1 = pickle.loads(pickle.dumps(C, protocol=proto))
+            self.assertEqual(C1.output(), expected_output)
 
 
 def test_main():
